--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		position: absolute;
 		border: 1px solid #000;
 		margin: auto;
-		right: 0;
-		left: 0;
+		right: 0px;
+		left: 0px;
 		z-index: 50;
-		margin-top:0px;
-		overflow:hidden;
+		margin-top: 0px;
+		overflow: hidden;
 	}
 	</style>
 </head>
